--- a/OilSardine_NOAA_MoES.Rmd
+++ b/OilSardine_NOAA_MoES.Rmd
@@ -1,6 +1,6 @@
 ---
 title: '\large{Fishing in a warming ocean: influence of changing temperature and upwelling intensity on Indian oil sardine (\textit{Sardinella longiceps}) landings}'
-author: \newline Eli Holmes$^1$, Smitha B.R.$^2$, Nimit Kumar$^3$, Sourav Maity$^3$, David Checkley$^4$, Mark Wells$^5$, Vera Trainer$^1$
+author: \newline Eli E. Holmes$^1$, Smitha B.R.$^2$, Nimit Kumar$^3$, Sourav Maity$^3$, David M. Checkley$^4$, Mark L. Wells$^5$, Vera L. Trainer$^1$
 #date: '`r format(Sys.time(), "%d %B, %Y")`'
 output: 
   pdf_document: default
@@ -25,12 +25,28 @@ header-includes:
 #Generic setup code common across all Rmds
 ```
 
-\noindent\small{1. Northwest Fisheries Science Center, NOAA, Seattle, WA. 2. Centre for Marine Living Resources and Ecology, MoES, Kochi, India. 3. Indian National Centre for Ocean Information Services, Hyderabad, India. 4. Scripps Institution of Oceanography, UC San Diego, San Diego, CA. 5. School of Marine Sciences, University of Maine, Orono, ME.}
+1. Northwest Fisheries Science Center, NOAA, Seattle, WA. 
+
+2. Centre for Marine Living Resources and Ecology, MoES, Kochi, India. 
+
+3. Indian National Centre for Ocean Information Services, Hyderabad, India. 
+4. Scripps Institution of Oceanography, UC San Diego, San Diego, CA. 
+
+5. School of Marine Sciences, University of Maine, Orono, ME.
+
+\newline\newline
+\noindent{\bf Running title}: Modeling Indian oil sardine landings
+
+# Acknowledgements {-}
+
+We thank the U.S. National Marine Fisheries Service and the Indian Ministy of Earth Sciences for support of the the joint U.S.-Indian research project: "Collaboration on the Development of a Fisheries and Harmful Algal Bloom and Monitoring and Prediction System in Indian Seas" which supported research visits. The visits took place at the Indian National Centre for Ocean Information Services (INCOIS) and Centre for Marine Living Resources and Ecology (CMLRE). We thank these institutes for their support during the research visits. We would also like to specifically acknowledge the support of  Dr. S.S.C Shenoi, Director of INCOIS, Dr. M. Sudhakar, Director of CMLRE, Dr. N. Saravanane (CMRLE), and Dr. Usha Varanasi (University of WAshington) for their support. The sardine landings data have been collected and analyzed by the Central Marine Fisheries Research Institute since the 1950s; we acknowledge the many researchers involved in this long-term data set.
+
+\clearpage
 
 
 \begin{abstract}
 
-Commercial landings of sardine are known for strong year-to-year fluctuations. A key driver is thought to be environmental variability, to which small forage fish are especially sensitive. We examined the environmental drivers associated with landings fluctuations in the Indian oil sardine using a 32-year time series off Kerala state. Past research suggested a variety of influential variables: precipitation, upwelling intensity, SST, chlorophyll and ENSO. Using the life-history of the Indian oil sardine, we developed hypotheses concerning how these environmental variables might affect landings and tested them using generalized additive models which allow non-linear response curves. We found significant correlation for only two variables: upwelling intensity and the multi-year average nearshore SST.  Both monsoon and post-monsoon landings were correlated with upwelling intensity in June-September. Upwelling intensity has both a positive effect (fueling higher food availability) and a negative effect at extreme intensity (bringing poorly oxygenated water to the surface). However, the most significant correlation (adjusted R2 of 67.5\%) was between the 2.5 year average nearshore SST and post-monsoon landings. The multi-year average SST also been identified as a predictor for Pacific sardine and southern African sardine fluctuations, suggesting that the average SST over the sardine life-span successfully captures a variety of factors which predict future abundance. The temperature in the Western Indian Ocean has been increasing faster than in other tropical oceans and the warming has been most extreme during the summer monsoon. Our work highlights that these changes in summer upwelling intensity and sea temperature are likely to affect landings. 
+Commercial landings of sardine are known for strong year-to-year fluctuations. A key driver is thought to be environmental variability, to which small forage fish are especially sensitive. We examined the environmental drivers associated with landings fluctuations in the Indian oil sardine using a 32-year time series off Kerala state. Past research suggested a variety of influential variables: precipitation, upwelling intensity, ocean temperature (SST), chlorophyll density and large-scale coupled atmosphere–ocean phenomena (ENSO). Using the life-history of the Indian oil sardine, we developed hypotheses concerning how these environmental variables might affect landings and tested them using generalized additive models which allow non-linear response curves and dynamic linear models which allow time-varying responses. We found significant correlation for only two variables: upwelling intensity and the multi-year average nearshore SST.  Both monsoon and post-monsoon landings were correlated with upwelling intensity in June-September. Upwelling intensity has both a positive effect (fueling higher food availability) and a negative effect at extreme intensity (bringing poorly oxygenated water to the surface). However, the most significant correlation (adjusted R$^2$ of 67.5\%) was between the 2.5 year average nearshore SST and post-monsoon landings. The multi-year average SST also been identified as a predictor for Pacific sardine and southern African sardine fluctuations, suggesting that the average SST over the sardine life-span successfully captures a variety of factors which predict future abundance. The temperature in the Western Indian Ocean has been increasing faster than in other tropical oceans and the warming has been most extreme during the summer monsoon. Our work highlights that these changes in summer upwelling intensity and sea temperature are likely to affect future landings. 
 \newline\newline
 \noindent{\bf Keywords}: Indian oil sardine, catch prediction, GAM modeling, climate, sea surface temperature, remote sensing, Southeastern Ariabian Sea
 
@@ -41,19 +57,19 @@ Commercial landings of sardine are known for strong year-to-year fluctuations. A
 # Introduction {-}
 
 <!-- small pelagics are influenced by the environment -->
-Environmental variability is known to be a key driver of population variability of small forage fish such as sardines, anchovy and herring [@Bakun1996; @AlheitHagen1997; @Curyetal2000; @Checkleyetal2017].  In particular, ocean temperature and upwelling dynamics, along with density-dependent feedback, have been identified as important in affecting recruitment success and biomass of European and Pacific sardines  (*Sardina pilchardus* and *Sardinops sagax*) [@JacobsonMacCall1995; @RykaczewskiCheckley2008; @Alheitetal2012; @LindegrenCheckley2012; @Lindegrenetal2013; @Garza-Giletal2015]. Like other sardines, the Indian oil sardines show strong interannual fluctuations and larger decadal booms and busts. The Indian oil sardine offers an instructive case study to investigate the effects of environmental variability, particularly temperature and upwelling dynamics, as they occupy an ocean system that is warmer than that occupied by other sardines and have a strong seasonal cycle driven by the Indian summer monsoon.
+Environmental variability is known to be a key driver of population variability of small forage fish such as sardines, anchovy and herring [@AlheitHagen1997; @Curyetal2000; @Checkleyetal2017].  In particular, ocean temperature and upwelling dynamics, along with density-dependent feedback, have been identified as important in affecting recruitment success and biomass of European and Pacific sardines  (*Sardina pilchardus* and *Sardinops sagax*) [@JacobsonMacCall1995; @RykaczewskiCheckley2008; @Alheitetal2012; @LindegrenCheckley2012; @Lindegrenetal2013; @Garza-Giletal2015]. Like other sardines, the Indian oil sardine shows strong interannual fluctuations and larger decadal booms and busts. The Indian oil sardine offers an instructive case study to investigate the effects of environmental variability, particularly temperature and upwelling dynamics, as they occupy an ocean system that is warmer than that occupied by other sardines and have a strong seasonal cycle driven by the Indian summer monsoon.
 
 <!-- indian oil sardine is important -->
-The Indian oil sardine (*Sardinella longiceps* Valenciennes, 1847) is one of the most commercially important fish resources along the southwest coast of India (Figure `r ref("fig:studyarea")`) and historically has comprised approximately 25% of the catch biomass [@Vivekanandanetal2003].  Landings of the Indian oil sardine are highly seasonal, peaking after the summer monsoon period in October-December and reaching a nadir in spring before the summer monsoon in April-June (Figure `r ref("fig:catch")`). At the same time, the landings of this small pelagic finfish are highly variable from year to year.  Small pelagics are well known to exhibit high variability in biomass due to the effects of environmental conditions on survival and recruitment [@Bakun1996; @AlheitHagen1997; @Curyetal2000; @Checkleyetal2017].  In this fishery, however, environmental conditions also affect exposure of sardines to the fishery.  Until recently, the Indian oil sardine fishery was artisanal and based on small human or low powered boats with no refrigeration. The fishery was confined to nearshore waters, and thus migration of sardines in and out of the coastal zone greatly affected exposure to the fishery.
+The Indian oil sardine (*Sardinella longiceps* Valenciennes, 1847) is one of the most commercially important fish resources along the southwest coast of India (Figure `r ref("fig:studyarea")`) and historically has comprised approximately 25% of the catch biomass [@Vivekanandanetal2003].  Landings of the Indian oil sardine are highly seasonal, peaking after the summer monsoon period in October-December and reaching a nadir in spring before the summer monsoon in April-June (Figure `r ref("fig:catch")`). At the same time, the landings of this small pelagic finfish are highly variable from year to year.  Small pelagics are well known to exhibit high variability in biomass due to the effects of environmental conditions on survival and recruitment [@AlheitHagen1997; @Curyetal2000; @Checkleyetal2017].  In this fishery, environmental conditions also affect exposure of sardines to the fishery.  Until recently, the Indian oil sardine fishery was artisanal and based on small human or low powered boats with no refrigeration. The fishery was confined to nearshore waters, and thus migration of sardines in and out of the coastal zone greatly affected exposure to the fishery.
 
 <!-- review of looking at env vars -->
-Researchers have examined a variety of environmental variables for their correlation with landings of the Indian oil sardine in order to understand the factors that drive landings variability. Precipitation during the southwest monsoon and the day of the monsoon arrival are thought to act as either a direct or indirect cue, as an index of other climatic conditions, for spawning [@MurtyEdelman1966; @AntonyRaja1969; @AntonyRaja1974; @Srinath1998; @Jayaprakash2002; @XuBoyce2009; @PitchaikaniLipton2012].  Although many studies have looked for and some have found correlations between precipitation and landings, the reported relationships are positive in some studies and negative in others [@Madhupratapetal1994]. Researchers have also looked for and found correlations with various metrics of upwelling intensity, such as sea level at Cochin [@MurtyEdelman1966; @LonghurstWooster1990; @Madhupratapetal1994; @Srinath1998; @Jayaprakash2002; @Thara2011], salinity and bottom sea temperature [@Krishnakumaretal2008], and with direct measures of productivity, such as nearshore zooplankton and phytoplankton abundance [@Hornell1910; @Nair1952; @NairSubrahmanyan1955; @Madhupratapetal1994; @Georgeetal2012; @Piontkovskietal2015; @PitchaikaniLipton2012; @Menonetal2019].  Researchers have also found correlations of landings with near-shore sea surface temperature (SST)  [@Annigeri1969; @PrabhuDhulkhed1970; @Pillai1991; @Suprabaetal2016]. SST  can affect both somatic growth rates and juvenile survival but also can cause fish to move off-shore and away from the shore-based fishery. The multi-year average sea temperature is postulated to have effects on recruitment and the survival of larval and juvenile sardines, which affect the later  overall abundance [@Takasukaetal2007; @Checkleyetal2017]. The El Ni\~{n}o/Southern Oscillation (ENSO) has a cascading effect on all the aforementioned environmental parameters (SST, precipitation, upwelling) which in turn impact oil sardines, and correlations have been found between ENSO indices and landings [@Suprabaetal2016; @Rohitetal2018] and coastal anoxia events in the fall [@Vallivattathillametal2017].
+Researchers have examined a variety of environmental variables for their correlation with landings of the Indian oil sardine. Precipitation during the monsoon and the day of the monsoon arrival are thought to act as either a direct or indirect cue for spawning [@MurtyEdelman1966; @AntonyRaja1969; @AntonyRaja1974; @Srinath1998; @Jayaprakash2002; @XuBoyce2009; @PitchaikaniLipton2012].  Although many studies have looked for and some have found correlations between precipitation and landings, the reported relationships are positive in some studies and negative in others [@Madhupratapetal1994]. Researchers have also looked for and found correlations with various metrics of upwelling intensity [@MurtyEdelman1966; @LonghurstWooster1990; @Madhupratapetal1994; @Srinath1998; @Jayaprakash2002; @Thara2011],  with direct measures of productivity such as nearshore zooplankton and phytoplankton abundance [@Hornell1910; @Nair1952; @NairSubrahmanyan1955; @Madhupratapetal1994; @Georgeetal2012; @Piontkovskietal2015; @PitchaikaniLipton2012; @Menonetal2019], and with near-shore sea surface temperature (SST)  [@Annigeri1969; @PrabhuDhulkhed1970; @Pillai1991; @Suprabaetal2016]. SST  can affect both somatic growth rates and juvenile survival but also can cause fish to move off-shore and away from the shore-based fishery. The multi-year average sea temperature is postulated to have effects on recruitment and the survival of larval and juvenile sardines, which affect the later  overall abundance [@Takasukaetal2007; @Checkleyetal2017]. The El Ni\\~no/Southern Oscillation (ENSO) has a cascading effect on all the aforementioned environmental parameters (SST, precipitation, upwelling) which in turn impact oil sardines, and correlations have been found between ENSO indices and landings [@Suprabaetal2016; @Rohitetal2018] and coastal anoxia events [@Vallivattathillametal2017].
 
 <!--
 Mury and Edelman used atmospheric presure differential as the metric of monsoon intensity and found a different pattern. Effect of monsoon was negative up to a theshold and then effect was positive after that. They gave a weird explaination. Low DO was bad up to the theshold but after threshold, it increased producivity. Used 1928-1955 landings.
 -->
 
-In this paper, we study the utility of environmental covariates from remote sensing to explain year-to-year variability in oil sardine landings using the time series of quarterly Indian oil sardine landings from the southwest coast of India. This time series is derived from a stratified sampling design that surveys landing sites along the southeast Indian coast and was first implemented in the 1950s [@Srinathetal2005]. This is purely a landings time series. Catch-at-length data are not available prior to 2001. Effort data are indirect (boat composition of the fishery) and appropriate effort data (estimates of number of trips or hours fishing) are only available in a few recent years.  In addition, stock size estimates and fisheries independent data are unavailable. Thus traditional length- or age-structured models (e.g. virtual population analysis) which produce biomass estimates are not possible. Instead we use statistical models with covariates to model and produce a one-year ahead forecast of landings. Unlike prior work on landings models with covariates, we use non-linear time-series models to allow a flexible effect of covariates and past catch on current landings.  We also specifically focus on environmental covariates measured via remote sensing.  Remote sensing data provide long time series of environmental data over a wide spatial extent at a daily and monthly resolution.  A better understanding of how and whether remote sensing data explains variation in seasonal catch will support future efforts to use remote sensing data to improve catch forecasts. 
+In this paper, we study the utility of environmental covariates from remote sensing to explain year-to-year variability in oil sardine landings using the time series of quarterly Indian oil sardine landings from the southwest coast of India. This time series is derived from a stratified sampling design that surveys the fishery landing sites along the southeast Indian coast and was first implemented in the 1950s [@Srinathetal2005]. This is purely a landings time series. Catch-at-length data are not available prior to 2001. Effort data are indirect (boat composition of the fishery) and appropriate effort data (estimates of number of trips or hours fishing) are only available in a few recent years.  In addition, stock size estimates and fisheries independent data are unavailable. Thus traditional length- or age-structured models (e.g. virtual population analysis) which produce biomass estimates are not possible. Instead we use statistical models with covariates to model and produce a one-year ahead forecast of landings. Unlike prior work on landings models with covariates, we use non-linear time-series models and dynamic linear models to allow a flexible effect of covariates and past catch on current landings.  We also focus on environmental covariates measured via remote sensing.  Remote sensing data provide long time series of environmental data over a wide spatial extent at a daily and monthly resolution.  A better understanding of how and whether remote sensing data explains variation in seasonal catch will support future efforts to use satellite data to improve catch forecasts. 
 
 Modeling and forecasting landings data using statistical models fit to annual or seasonal catch time series has a long tradition in fisheries and has been applied to many species [@Mendelssohn1981; @CohenStone1987; @NobelSathianandan1991; @StergiouChristou1996;  @Lloretetal2000; @Georgakarakosetal2006; @Hansenetal2006; @Pristaetal2011; @FarmerFroeschke2015; @Lawer2016], including oil sardines [@Srinath1998; @VenugopalanSrinath1998]. These models can be used to identity the variables correlated with catch fluctuations and can be used to provide landings forecasts which are useful for fishery managers and the fishing industry. An example of the former is using catch forecasts to set or give warnings of seasonal fishery closures if the forecasted catch is higher than the allowed catch limits [@FarmerFroeschke2015]. An example of the latter is the annual Gulf and Atlantic menhaden forecast produced by NOAA Fisheries; the report is titled, "Forecast for the 20XX Gulf and Atlantic purse-seine fisheries and review of the 20XX fishing season".  A multiple regression model with environmental covaraites, similar to the model used in our paper, was developed by NOAA Fisheries in the 1970s [@Schaafetal1975]. This model has been used for the last 45 years to produce an annual forecast of menhaden landings. This forecast was requested by the menhaden fishing industry and has been used for planning purposes by the industry, not only the fishers but also fish catch sellers and buyers, businesses which provide fisheries gear, and banks which provide financing [@Hansenetal2006].
 
@@ -214,7 +230,7 @@ The strongest correlation however was found with the multi-year average sea surf
 
 # Discussion
 
-Sardines in all the world's ecosystems exhibit large fluctuations in abundance [@Baumgartneretal1992].  These small forage fish are strongly influenced by natural variability in the ocean environment. Upwelling, influenced by both large-scale forces such as regimes shifts and El Ni\~{n}o/Southern Oscillation patterns [@AlheitHagen1997; @Schwartzloseetal2010] and by seasonal wind and current patterns, brings nutrient rich and oxygen rich waters to the surface. This drives the seasonal variability in phytoplankton resources and in turn sardine prey [@Bakunetal2008]. Local variability in temperature, salinity, and oxygen levels have both direct and indirect on sardine reproduction, recruitment and survival [@Checkleyetal2017]. Sardines are also influenced by competition and predation by other species and well-known for their sensitivity to over-fishing which has been linked to many fishery collapses [@Kripaetal2018].
+Sardines in all the world's ecosystems exhibit large fluctuations in abundance [@Baumgartneretal1992].  These small forage fish are strongly influenced by natural variability in the ocean environment. Upwelling, influenced by both large-scale forces such as regimes shifts and El Ni\\~{n}o/Southern Oscillation patterns [@AlheitHagen1997; @Schwartzloseetal2010] and by seasonal wind and current patterns, brings nutrient rich and oxygen rich waters to the surface. This drives the seasonal variability in phytoplankton resources and in turn sardine prey [@Bakunetal2008]. Local variability in temperature, salinity, and oxygen levels have both direct and indirect on sardine reproduction, recruitment and survival [@Checkleyetal2017]. Sardines are also influenced by competition and predation by other species and well-known for their sensitivity to over-fishing which has been linked to many fishery collapses [@Kripaetal2018].
 
 Many studies on Pacific sardines have looked at the correlation between ocean temperature (SST) and recruitment.  Temperature can have direct effect on larval survival and growth and an indirect effect on food availability.  Studies in the California Current System, have found that SST explains year-to-year variability in Pacific sardine recruitment [@JacobsonMacCall1995; @Checkleyetal2009; @LindegrenCheckley2012; @Checkleyetal2017] and that the average nearshore temperature over multiple seasons is the explanatory variable. Similar to  these studies, we found that the average nearshore SST over multiple seasons was the covariate that explained the most variability in catch both in the monsoon and post-monsoon months. McClatchie et al. [-@McClatchieetal2010] found no SST relationship with SST and Pacific sardine recruitment, however their analysis used a linear relationship while the other studies, and ours, that found a relationship [@JacobsonMacCall1995; @Checkleyetal2017] allowed a non-linear relationship.  Both Jacobson and MacCall (1995) and Checkley et al. (2017) found a step-like response function for temperature: below a threshold value the effect of temperature was linear and above the threshold, the effect was flat and at lower temperatures the effect was negative and became positive as temperature increased.  Our analysis found a similar pattern with a negative effect when the 2.5-year average temperature was below $28.35^\circ$C and positive above and with the positive effect leveling off above $28.5^\circ$C (Figure `r ref("fig:cov-effects")`).
 
